--- a/index.css
+++ b/index.css
@@ -532,42 +532,112 @@ body {
     justify-content: space-evenly;
 }
 
-.pick__answer,
-.pick__answer_color {
-    width: 95%;
-    background-color: rgba(242, 243, 243, 0.15);
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-    font-family: 'PT Serif', serif;
-    font-weight: normal;
-    padding: 0 0 0 5%;
-    font-size: 30px;
-    line-height: 44px;
+.pick__answer, .pick__answer_color {
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .pick__answers_figure .pick__answer {
+    display: flex;
+    justify-content: center;
+}
+
+.pick__answer label,
+.pick__answer_color label {
+    width: 90%;
+    background-color: rgba(242, 243, 243, 0.15);
+    font-family: 'PT Serif', serif;
+    font-weight: normal;
+    padding: 0 0 0 10%;
+    font-size: 30px;
+    line-height: 44px;
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+
+.pick__answers_figure .pick__answer label {
     padding: 0;
     background-color: #fff;
-    color: #000;
+    color: #272727;
+    display: flex;
+    justify-content: center;
 }
 
-input {
-    width: 20px;
-    height: 30px;
-    margin-right: 30px;
-}
-
-.pick__answer {
+.pick__answer label {
     height: 75px;
+    position: relative;
 }
 
-.pick__answer_color {
+.pick__answer_color label {
     height: 150px;
     margin-right: 5px;
 }
 
-.pick__rotate {
+.pick__answer label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin-right: 3.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.pick__answers_figure .pick__answer label::before,
+.pick__answer_color label::before {
+    content: '';
+    width: 91%;
+    height: 80%;
+    border: 15px solid transparent;
+    border-radius: 0;
+    position: absolute;
+    z-index: 1;
+    background: transparent;
+    top: 0;
+    left: 0;
+}
+
+.pick__answers_figure .pick__answer label::before {
+    left: -13px;
+    top: -7px;
+}
+
+label {
+    cursor: pointer;
+}
+
+input:checked + label::before {
+    border-color: #272727;
+    background-color: #2950C2;
+}
+
+input:checked + label {
+    background-color: #FFC700;
+}
+
+.pick__answers_figure input:checked + label::before,
+.pick__answer_color input:checked + label::before {
+    border-color: #FFC700;
+    background-color: transparent;
+}
+
+.pick__answer_color input:checked + label {
+    background-color: transparent;
+}
+
+input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.last__rotate {
     margin-top: 50px;
     width: 100px;
     height: 100px;
@@ -575,27 +645,11 @@ input {
     animation: spin 3s linear infinite;
 }
 
-.pick__download {
+.last__download {
     margin-top: 20px;
     width: 50%;
     text-align: center;
     word-wrap: break-word;
-}
-
-.pick__result {
-    width: 80vw;
-    text-align: left;
-    text-transform: uppercase;
-    font-family: 'Yeseva One', cursive;
-    font-weight: normal;
-    font-size: 40px;
-    line-height: 55px;
-    word-wrap: break-word;
-    margin: 5px 0;
-}
-
-.pick__result span {
-    color: #FFC700;
 }
 
 @keyframes spin { 
@@ -695,4 +749,21 @@ input {
     bottom: 0;
     text-align: center;
     margin-top: 100px;
+}
+
+.last__result {
+    width: 80vw;
+    text-align: left;
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 55px;
+    word-wrap: break-word;
+    margin: 5px 0;
+    color: #fff;
+}
+
+.last__result span {
+    color: #FFC700;
 }
